[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashan-cn-procurement"
version = "0.1.0"
description = "China-style procurement and reimbursement customization for ERPNext 16"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hermes Agent" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"" = ["package.json", "license.txt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ashan_cn_procurement*"]
